src/parser/parser.rs
//! Recursive descent parser for ARIA.
//!
//! This module implements a hand-written recursive descent parser that
//! handles ARIA's indentation-significant syntax.

use crate::errors::{ParseError, Result};
use crate::lexer::{Span, Token, TokenKind};
use crate::parser::ast::*;

/// The parser for ARIA source code.
pub struct Parser<'a> {
    tokens: &'a [Token],
    pos: usize,
}

impl<'a> Parser<'a> {
    pub fn new(tokens: &'a [Token]) -> Self {
        Self { tokens, pos: 0 }
    }

    /// Parse a complete source file.
    pub fn parse(mut self) -> Result<SourceFile> {
        let start = self.current_span();
        let mut items = Vec::new();

        while !self.at_end() {
            // Skip newlines at top level
            while self.check(TokenKind::Newline) {
                self.advance();
            }
            if self.at_end() {
                break;
            }
            items.push(self.parse_item()?);
        }

        let end = self.previous_span();
        Ok(SourceFile {
            items,
            span: start.merge(end),
        })
    }

    // ========================================================================
    // Items
    // ========================================================================

    fn parse_item(&mut self) -> Result<Item> {
        let attrs = self.parse_attributes()?;
        let start = self.current_span();

        // Check for visibility
        let vis = self.parse_visibility()?;

        // Check for async/unsafe modifiers
        let is_async = self.match_token(TokenKind::As);
        let is_unsafe = self.match_token(TokenKind::Un);

        let mut kind = if self.check(TokenKind::F) {
            self.parse_function(is_async, is_unsafe, vis)?
        } else if self.check(TokenKind::S) {
            ItemKind::Struct(self.parse_struct(vis)?)
        } else if self.check(TokenKind::E) {
            ItemKind::Enum(self.parse_enum(vis)?)
        } else if self.check(TokenKind::T) {
            ItemKind::Trait(self.parse_trait(is_unsafe, vis)?)
        } else if self.check(TokenKind::I) {
            ItemKind::Impl(self.parse_impl(is_unsafe)?)
        } else if self.check(TokenKind::Type) {
            ItemKind::TypeAlias(self.parse_type_alias()?)
        } else if self.check(TokenKind::Us) {
            ItemKind::Use(self.parse_use()?)
        } else if self.check(TokenKind::Md) {
            ItemKind::Module(self.parse_module(vis)?)
        } else if self.check_ident() && self.peek_is(TokenKind::ColonColon) {
            ItemKind::Const(self.parse_const(vis)?)
        } else {
            return Err(self.error("expected item (f, s, e, t, i, type, us, md)"));
        };

        // Extract @pre/@post contracts and add them to the function
        if let ItemKind::Function(ref mut func) = kind {
            for attr in &attrs {
                if attr.name.name == "pre" || attr.name.name == "post" {
                    if let Some(contract) = Self::extract_contract(attr) {
                        if attr.name.name == "pre" {
                            func.preconditions.push(contract);
                        } else {
                            func.postconditions.push(contract);
                        }
                    }
                }
            }
        }

        // Filter out @pre/@post from attrs (they're now in the function)
        let remaining_attrs: Vec<_> = attrs
            .into_iter()
            .filter(|a| a.name.name != "pre" && a.name.name != "post")
            .collect();

        let end = self.previous_span();
        Ok(Item {
            kind,
            attrs: remaining_attrs,
            span: start.merge(end),
        })
    }

    /// Extract a Contract from a @pre or @post attribute
    fn extract_contract(attr: &Attribute) -> Option<Contract> {
        // Find the condition expression in the args
        let condition_arg = attr.args.iter().find(|a| a.name.name == "condition")?;
        let condition = condition_arg.expr.clone()?;

        // Find optional message
        let message = attr.args.iter()
            .find(|a| a.name.name == "message")
            .and_then(|a| {
                if let Some(lit) = &a.value {
                    if let LiteralKind::String(s) = &lit.kind {
                        return Some(s.clone());
                    }
                }
                None
            });

        Some(Contract {
            condition,
            message,
            span: attr.span,
        })
    }

    fn parse_attributes(&mut self) -> Result<Vec<Attribute>> {
        let mut attrs = Vec::new();
        while self.check(TokenKind::At) {
            attrs.push(self.parse_attribute()?);
            self.skip_newlines();
        }
        Ok(attrs)
    }

    fn parse_attribute(&mut self) -> Result<Attribute> {
        let start = self.current_span();
        self.expect(TokenKind::At)?;
        let name = self.parse_ident()?;

        // Check for contract attributes that take expression arguments
        let is_contract = name.name == "pre" || name.name == "post";

        let args = if self.match_token(TokenKind::LParen) {
            if is_contract {
                self.parse_contract_attr_args()?
            } else {
                let args = self.parse_attr_args()?;
                self.expect(TokenKind::RParen)?;
                args
            }
        } else {
            Vec::new()
        };

        Ok(Attribute {
            name,
            args,
            span: start.merge(self.previous_span()),
        })
    }

    /// Parse contract attribute arguments: @pre(condition) or @pre(condition, "message")
    fn parse_contract_attr_args(&mut self) -> Result<Vec<AttrArg>> {
        let start = self.current_span();
        let expr = self.parse_expr()?;
        let mut args = vec![AttrArg {
            name: Ident::new("condition", start),
            value: None,
            expr: Some(Box::new(expr)),
            span: start.merge(self.previous_span()),
        }];

        // Optional message
        if self.match_token(TokenKind::Comma) {
            let msg_start = self.current_span();
            if let Some(TokenKind::String(s)) = self.current_kind() {
                let msg = s.clone();
                self.advance();
                args.push(AttrArg {
                    name: Ident::new("message", msg_start),
                    value: Some(Literal {
                        kind: LiteralKind::String(msg.clone()),
                        span: msg_start.merge(self.previous_span()),
                    }),
                    expr: None,
                    span: msg_start.merge(self.previous_span()),
                });
            }
        }

        self.expect(TokenKind::RParen)?;
        Ok(args)
    }

    fn parse_attr_args(&mut self) -> Result<Vec<AttrArg>> {
        let mut args = Vec::new();
        if !self.check(TokenKind::RParen) {
            loop {
                let start = self.current_span();
                let name = self.parse_ident()?;
                let value = if self.match_token(TokenKind::Eq) {
                    Some(self.parse_literal()?)
                } else {
                    None
                };
                args.push(AttrArg {
                    name,
                    value,
                    expr: None,
                    span: start.merge(self.previous_span()),
                });
                if !self.match_token(TokenKind::Comma) {
                    break;
                }
            }
        }
        Ok(args)
    }

    fn parse_visibility(&mut self) -> Result<Visibility> {
        if self.match_token(TokenKind::Pub) {
            // Check for pub(crate)
            if self.match_token(TokenKind::LParen) {
                if self.check_ident_str("crate") {
                    self.advance();
                    self.expect(TokenKind::RParen)?;
                    return Ok(Visibility::Crate);
                }
                self.expect(TokenKind::RParen)?;
            }
            Ok(Visibility::Public)
        } else {
            Ok(Visibility::Private)
        }
    }

    fn parse_function(&mut self, is_async: bool, is_unsafe: bool, vis: Visibility) -> Result<ItemKind> {
        let start = self.current_span();
        self.expect(TokenKind::F)?;
        let name = self.parse_ident()?;

        let generics = self.parse_optional_generics()?;
        let params = self.parse_fn_params()?;
        let return_type = self.parse_optional_return_type()?;

        let body = if self.match_token(TokenKind::Eq) {
            // Single expression body: `f foo -> Int = 42`
            let expr = self.parse_expr()?;
            Some(FnBody::Expr(Box::new(expr)))
        } else if self.check(TokenKind::LBrace) {
            // Brace block
            Some(FnBody::Block(self.parse_brace_block()?))
        } else if self.check(TokenKind::Newline) {
            // Indented block
            self.advance(); // consume newline
            if self.check(TokenKind::Indent) {
                Some(FnBody::Block(self.parse_indent_block()?))
            } else {
                // No body (trait method signature)
                None
            }
        } else {
            None
        };

        Ok(ItemKind::Function(Function {
            name,
            generics,
            params,
            return_type,
            body,
            is_async,
            is_unsafe,
            visibility: vis,
            preconditions: Vec::new(),
            postconditions: Vec::new(),
            span: start.merge(self.previous_span()),
        }))
    }

    fn parse_fn_params(&mut self) -> Result<Vec<Param>> {
        if !self.match_token(TokenKind::LParen) {
            return Ok(Vec::new());
        }

        let mut params = Vec::new();
        if !self.check(TokenKind::RParen) {
            loop {
                params.push(self.parse_param()?);
                if !self.match_token(TokenKind::Comma) {
                    break;
                }
            }
        }
        self.expect(TokenKind::RParen)?;
        Ok(params)
    }

    fn parse_param(&mut self) -> Result<Param> {
        let start = self.current_span();

        // Handle &self and &mut self
        if self.check(TokenKind::Amp) {
            self.advance();
            let is_mut = self.match_token(TokenKind::Mut);
            if self.check_ident_str("self") {
                let name = self.parse_ident()?;
                let ty = Type {
                    kind: TypeKind::Ref(
                        Box::new(Type {
                            kind: TypeKind::Path(TypePath {
                                segments: vec![TypePathSegment {
                                    name: Ident::new("Self", start),
                                    args: None,
                                    span: start,
                                }],
                                span: start,
                            }),
                            span: start,
                        }),
                        is_mut,
                    ),
                    span: start.merge(self.previous_span()),
                };
                return Ok(Param {
                    name,
                    ty,
                    default: None,
                    span: start.merge(self.previous_span()),
                });
            }
        }

        // Handle self
        if self.check_ident_str("self") {
            let name = self.parse_ident()?;
            let ty = Type {
                kind: TypeKind::Path(TypePath {
                    segments: vec![TypePathSegment {
                        name: Ident::new("Self", start),
                        args: None,
                        span: start,
                    }],
                    span: start,
                }),
                span: start,
            };
            return Ok(Param {
                name,
                ty,
                default: None,
                span: start.merge(self.previous_span()),
            });
        }

        let name = self.parse_ident()?;
        self.expect(TokenKind::Colon)?;
        let ty = self.parse_type()?;
        let default = if self.match_token(TokenKind::Eq) {
            Some(self.parse_expr()?)
        } else {
            None
        };

        Ok(Param {
            name,
            ty,
            default,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_optional_return_type(&mut self) -> Result<Option<Type>> {
        if self.match_token(TokenKind::Arrow) {
            Ok(Some(self.parse_type()?))
        } else {
            Ok(None)
        }
    }

    fn parse_struct(&mut self, vis: Visibility) -> Result<Struct> {
        let start = self.current_span();
        self.expect(TokenKind::S)?;
        let name = self.parse_ident()?;
        let generics = self.parse_optional_generics()?;

        let kind = if self.match_token(TokenKind::LParen) {
            // Tuple struct: `s Point(Int, Int)`
            if self.check(TokenKind::RParen) {
                self.advance();
                StructKind::Unit
            } else {
                // Check if it's named fields or just types
                if self.check_ident() && self.peek_is(TokenKind::Colon) {
                    // Named tuple fields: `s Point(x: Int, y: Int)`
                    let fields = self.parse_struct_fields_inline()?;
                    self.expect(TokenKind::RParen)?;
                    StructKind::Named(fields)
                } else {
                    // Type-only tuple: `s Point(Int, Int)`
                    let mut types = Vec::new();
                    loop {
                        types.push(self.parse_type()?);
                        if !self.match_token(TokenKind::Comma) {
                            break;
                        }
                    }
                    self.expect(TokenKind::RParen)?;
                    StructKind::Tuple(types)
                }
            }
        } else if self.check(TokenKind::LBrace) {
            // Brace style: `s Point { x: Int, y: Int }`
            self.advance();
            let fields = self.parse_struct_fields_inline()?;
            self.expect(TokenKind::RBrace)?;
            StructKind::Named(fields)
        } else if self.check(TokenKind::Newline) {
            // Indented style
            self.advance();
            if self.check(TokenKind::Indent) {
                self.advance();
                let fields = self.parse_struct_fields_indented()?;
                StructKind::Named(fields)
            } else {
                StructKind::Unit
            }
        } else {
            StructKind::Unit
        };

        Ok(Struct {
            name,
            generics,
            kind,
            visibility: vis,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_struct_fields_inline(&mut self) -> Result<Vec<Field>> {
        let mut fields = Vec::new();
        if !self.check(TokenKind::RParen) && !self.check(TokenKind::RBrace) {
            loop {
                fields.push(self.parse_field()?);
                if !self.match_token(TokenKind::Comma) {
                    break;
                }
                // Allow trailing comma
                if self.check(TokenKind::RParen) || self.check(TokenKind::RBrace) {
                    break;
                }
            }
        }
        Ok(fields)
    }

    fn parse_struct_fields_indented(&mut self) -> Result<Vec<Field>> {
        let mut fields = Vec::new();
        while !self.check(TokenKind::Dedent) && !self.at_end() {
            self.skip_newlines();
            if self.check(TokenKind::Dedent) {
                break;
            }
            fields.push(self.parse_field()?);
            self.skip_newlines();
        }
        if self.check(TokenKind::Dedent) {
            self.advance();
        }
        Ok(fields)
    }

    fn parse_field(&mut self) -> Result<Field> {
        let start = self.current_span();
        let vis = self.parse_visibility()?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::Colon)?;
        let ty = self.parse_type()?;
        let default = if self.match_token(TokenKind::Eq) {
            Some(self.parse_expr()?)
        } else {
            None
        };

        Ok(Field {
            name,
            ty,
            default,
            visibility: vis,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_enum(&mut self, vis: Visibility) -> Result<Enum> {
        let start = self.current_span();
        self.expect(TokenKind::E)?;
        let name = self.parse_ident()?;
        let generics = self.parse_optional_generics()?;

        let variants = if self.match_token(TokenKind::Eq) {
            // Inline style: `e Bool = True | False`
            self.parse_enum_variants_inline()?
        } else if self.check(TokenKind::LBrace) {
            self.advance();
            let variants = self.parse_enum_variants_brace()?;
            self.expect(TokenKind::RBrace)?;
            variants
        } else if self.check(TokenKind::Newline) {
            self.advance();
            if self.check(TokenKind::Indent) {
                self.advance();
                self.parse_enum_variants_indented()?
            } else {
                Vec::new()
            }
        } else {
            Vec::new()
        };

        Ok(Enum {
            name,
            generics,
            variants,
            visibility: vis,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_enum_variants_inline(&mut self) -> Result<Vec<Variant>> {
        let mut variants = Vec::new();
        loop {
            variants.push(self.parse_variant()?);
            if !self.match_token(TokenKind::Pipe) {
                break;
            }
        }
        Ok(variants)
    }

    fn parse_enum_variants_brace(&mut self) -> Result<Vec<Variant>> {
        let mut variants = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.at_end() {
            variants.push(self.parse_variant()?);
            if !self.match_token(TokenKind::Comma) {
                break;
            }
        }
        Ok(variants)
    }

    fn parse_enum_variants_indented(&mut self) -> Result<Vec<Variant>> {
        let mut variants = Vec::new();
        while !self.check(TokenKind::Dedent) && !self.at_end() {
            self.skip_newlines();
            if self.check(TokenKind::Dedent) {
                break;
            }
            variants.push(self.parse_variant()?);
            self.skip_newlines();
        }
        if self.check(TokenKind::Dedent) {
            self.advance();
        }
        Ok(variants)
    }

    fn parse_variant(&mut self) -> Result<Variant> {
        let start = self.current_span();
        let name = self.parse_ident()?;

        let kind = if self.match_token(TokenKind::LParen) {
            if self.check(TokenKind::RParen) {
                self.advance();
                VariantKind::Unit
            } else if self.check_ident() && self.peek_is(TokenKind::Colon) {
                // Named fields
                let fields = self.parse_struct_fields_inline()?;
                self.expect(TokenKind::RParen)?;
                VariantKind::Named(fields)
            } else {
                // Tuple variant
                let mut types = Vec::new();
                loop {
                    types.push(self.parse_type()?);
                    if !self.match_token(TokenKind::Comma) {
                        break;
                    }
                }
                self.expect(TokenKind::RParen)?;
                VariantKind::Tuple(types)
            }
        } else {
            VariantKind::Unit
        };

        Ok(Variant {
            name,
            kind,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_trait(&mut self, is_unsafe: bool, vis: Visibility) -> Result<Trait> {
        let start = self.current_span();
        self.expect(TokenKind::T)?;
        let name = self.parse_ident()?;
        let generics = self.parse_optional_generics()?;

        let supertraits = if self.match_token(TokenKind::Colon) {
            self.parse_type_bounds()?
        } else {
            Vec::new()
        };

        let items = if self.check(TokenKind::LBrace) {
            self.advance();
            let items = self.parse_trait_items_brace()?;
            self.expect(TokenKind::RBrace)?;
            items
        } else if self.check(TokenKind::Newline) {
            self.advance();
            if self.check(TokenKind::Indent) {
                self.advance();
                self.parse_trait_items_indented()?
            } else {
                Vec::new()
            }
        } else {
            Vec::new()
        };

        Ok(Trait {
            name,
            generics,
            supertraits,
            items,
            visibility: vis,
            is_unsafe,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_trait_items_brace(&mut self) -> Result<Vec<TraitItem>> {
        let mut items = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.at_end() {
            self.skip_newlines();
            if self.check(TokenKind::RBrace) {
                break;
            }
            items.push(self.parse_trait_item()?);
            self.skip_newlines();
        }
        Ok(items)
    }

    fn parse_trait_items_indented(&mut self) -> Result<Vec<TraitItem>> {
        let mut items = Vec::new();
        while !self.check(TokenKind::Dedent) && !self.at_end() {
            self.skip_newlines();
            if self.check(TokenKind::Dedent) {
                break;
            }
            items.push(self.parse_trait_item()?);
            self.skip_newlines();
        }
        if self.check(TokenKind::Dedent) {
            self.advance();
        }
        Ok(items)
    }

    fn parse_trait_item(&mut self) -> Result<TraitItem> {
        if self.check(TokenKind::Type) {
            Ok(TraitItem::TypeAlias(self.parse_type_alias()?))
        } else if self.check(TokenKind::F) || self.check(TokenKind::As) {
            let is_async = self.match_token(TokenKind::As);
            match self.parse_function(is_async, false, Visibility::Private)? {
                ItemKind::Function(f) => Ok(TraitItem::Function(f)),
                _ => unreachable!(),
            }
        } else {
            Err(self.error("expected trait item (type or f)"))
        }
    }

    fn parse_impl(&mut self, is_unsafe: bool) -> Result<Impl> {
        let start = self.current_span();
        self.expect(TokenKind::I)?;

        let generics = self.parse_optional_generics()?;

        // Parse either:
        // - `i Type` (inherent impl)
        // - `i Trait for Type` (trait impl)
        let first_type = self.parse_type()?;

        let (trait_, self_type) = if self.match_token(TokenKind::For) {
            let self_type = self.parse_type()?;
            (Some(first_type), self_type)
        } else {
            (None, first_type)
        };

        let where_clause = self.parse_optional_where_clause()?;

        let items = if self.check(TokenKind::LBrace) {
            self.advance();
            let items = self.parse_impl_items_brace()?;
            self.expect(TokenKind::RBrace)?;
            items
        } else if self.check(TokenKind::Newline) {
            self.advance();
            if self.check(TokenKind::Indent) {
                self.advance();
                self.parse_impl_items_indented()?
            } else {
                Vec::new()
            }
        } else {
            Vec::new()
        };

        Ok(Impl {
            generics,
            trait_,
            self_type,
            where_clause,
            items,
            is_unsafe,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_impl_items_brace(&mut self) -> Result<Vec<ImplItem>> {
        let mut items = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.at_end() {
            self.skip_newlines();
            if self.check(TokenKind::RBrace) {
                break;
            }
            items.push(self.parse_impl_item()?);
            self.skip_newlines();
        }
        Ok(items)
    }

    fn parse_impl_items_indented(&mut self) -> Result<Vec<ImplItem>> {
        let mut items = Vec::new();
        while !self.check(TokenKind::Dedent) && !self.at_end() {
            self.skip_newlines();
            if self.check(TokenKind::Dedent) {
                break;
            }
            items.push(self.parse_impl_item()?);
            self.skip_newlines();
        }
        if self.check(TokenKind::Dedent) {
            self.advance();
        }
        Ok(items)
    }

    fn parse_impl_item(&mut self) -> Result<ImplItem> {
        if self.check(TokenKind::Type) {
            Ok(ImplItem::TypeAlias(self.parse_type_alias()?))
        } else if self.check(TokenKind::F) || self.check(TokenKind::As) || self.check(TokenKind::Pub) {
            let vis = self.parse_visibility()?;
            let is_async = self.match_token(TokenKind::As);
            match self.parse_function(is_async, false, vis)? {
                ItemKind::Function(f) => Ok(ImplItem::Function(f)),
                _ => unreachable!(),
            }
        } else {
            Err(self.error("expected impl item (type or f)"))
        }
    }

    fn parse_type_alias(&mut self) -> Result<TypeAlias> {
        let start = self.current_span();
        self.expect(TokenKind::Type)?;
        let name = self.parse_ident()?;
        let generics = self.parse_optional_generics()?;
        let ty = if self.match_token(TokenKind::Eq) {
            Some(self.parse_type()?)
        } else {
            None
        };

        Ok(TypeAlias {
            name,
            generics,
            ty,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_use(&mut self) -> Result<Use> {
        let start = self.current_span();
        self.expect(TokenKind::Us)?;
        let tree = self.parse_use_tree()?;
        Ok(Use {
            tree,
            span: start.merge(self.previous_span()),
        })
    }

    fn parse_use_tree(&mut self) -> Result<UseTree> {
        if self.match_token(TokenKind::Star) {
            return Ok(UseTree::Glob);
        }

        if self.match_token(TokenKind::LBrace) {
            let mut trees = Vec::new();
            loop {
                trees.push(self.parse_use_tree()?);
                if !self.match_token(TokenKind::Comma) {
                    break;
                }
            }
            self.expect(TokenKind::RBrace)?;
            return Ok(UseTree::Group(trees));
        }
